--- a/scraping_processing_grouping.ipynb
+++ b/scraping_processing_grouping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "    'გლდან': 'გლდანი',\n",
     "    'დიდ დიღომ': 'დიდი დიღომი',\n",
     "    'დიდი დიღომ': 'დიდი დიღომი',\n",
-    "    'დიდუბე': 'დიდუბე',\n",
+    "    'დიდუბ': 'დიდუბე',\n",
     "    'დიღმის მასივ': 'დიღმის მასივი',\n",
     "    'მასივ': 'დიღმის მასივი',\n",
     "    'დიღომი 1': 'დიღომი',\n",
@@ -135,7 +135,7 @@
     "    'ვერა': 'ვერა',\n",
     "    'ვეძის': 'ვეძისი',\n",
     "    'ზაჰეს': 'ზაჰესი',\n",
-    "    'თემქა': 'თემქა',\n",
+    "    'თემქ': 'თემქა',\n",
     "    'ივერთუბ': 'ივერთუბანი',\n",
     "    'ისან': 'ისანი',\n",
     "    'ლილო': 'ლილოს დასახლება',\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,10 @@
     "all_time_grouped=all_time_grouped.sort_values(['Date Published','General Address','Status','Condition','Article ID'])\n",
     "all_time_grouped=all_time_grouped.drop_duplicates(subset=['Date Published','General Address','Status','Condition'],keep='last')\n",
     "all_time_grouped=all_time_grouped.groupby(['Date Published','Status']).filter(lambda x:x['Article ID'].sum()>=10)\n",
-    "all_time_grouped.to_csv(os.path.join('visualize','all_time_grouped.csv'),index=False)\n",
+    "all_time_grouped['Date Published']=pd.to_datetime(all_time_grouped['Date Published'],errors='coerce')\n",
+    "all_time_grouped=all_time_grouped.sort_values('Date Published')\n",
+    "all_time_grouped.to_csv(os.path.join('dash','all_time_grouped.csv'),index=False)\n",
+    "all_time_grouped.to_csv(os.path.join('data','all_time_grouped.csv'),index=False)\n",
     "\n",
     "\n",
     "print('Finished all_time_grouped.csv')"
