--- a/scraping_processing_grouping.ipynb
+++ b/scraping_processing_grouping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv('daily_df.csv')"
+    "df=pd.read_csv('data/daily_df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,15 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "#make more general\n",
     "df['General Address'] = df['General Address'].apply(contains_key)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "df.drop('Detailed Address',axis=1,errors='ignore',inplace=True)\n",
     "df.insert(\n",
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +255,7 @@
     "#save the processed df\n",
     "\n",
     "daily_df_processed=df\n",
-    "daily_df_processed.to_csv('daily_df_processed.csv',index=False)\n",
+    "daily_df_processed.to_csv('data/daily_df_processed.csv',index=False)\n",
     "print('Finished preprocessing')"
    ]
   },
@@ -271,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +280,14 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('daily_df_processed.csv')\n",
+    "df=pd.read_csv('data/daily_df_processed.csv')\n",
     "\n",
     "df['Date Published']=pd.to_datetime(df['Date Published'],errors='coerce')\n",
     "\n",
     "grouped_df=df.groupby([df['Date Published'].dt.date,'General Address','Status','Condition']).agg({'Article ID':'count','Price Per SQMT':'median'}).reset_index()\n",
     "\n",
-    "all_time_grouped=pd.read_csv(os.path.join('visualize','all_time_grouped.csv'))\n",
+    "all_time_grouped=pd.read_csv(os.path.join('dash','all_time_grouped.csv'))\n",
+    "all_time_grouped=all_time_grouped.drop_duplicates(subset=['Date Published','General Address','Status','Condition'],keep='last')\n",
     "all_time_grouped=pd.concat([all_time_grouped,grouped_df],ignore_index=True)\n",
     "all_time_grouped=all_time_grouped.sort_values(['Date Published','General Address','Status','Condition','Article ID'])\n",
     "all_time_grouped=all_time_grouped.drop_duplicates(subset=['Date Published','General Address','Status','Condition'],keep='last')\n",
@@ -301,6 +299,120 @@
     "\n",
     "\n",
     "print('Finished all_time_grouped.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('data/all_time_unprocessed.csv')[['Address','Date Published','Price','Details_1']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['address_simplified']=df['Address'].apply(lambda x:\n",
+    "                    'თბილისი,'+x.split('ქ.')[0].split('გამზ')[0].replace(' 0','').replace(' 1','').replace(' 2','').replace(' 3','').split(',')[-1] if isinstance(x,str) else None\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date\n",
+    "month_dict={\n",
+    " 'იან':'January',\n",
+    " 'თებ':'February',\n",
+    " 'მარ':'March',\n",
+    " 'აპრ':'April',\n",
+    " 'მაი':'May',\n",
+    " 'ივნ':'June',\n",
+    " 'ივლ':'July',\n",
+    " 'აგვ':'August',\n",
+    " 'სექ':'September',\n",
+    " 'ოქტ':'October',\n",
+    " 'ნოე':'November',\n",
+    " 'დეკ':'December'\n",
+    "}\n",
+    "\n",
+    "df['Date Published']=df['Date Published'].replace(month_dict, regex=True)\n",
+    "df['Date Published']=pd.to_datetime(df['Date Published'],errors='coerce')\n",
+    "\n",
+    "#area\n",
+    "df['Area SQMT']=df['Details_1'].astype(str).apply(lambda x:x.split('საერთო ფართი|')[-1].split(' ')[0] if isinstance(x,str) else None).apply(pd.to_numeric,errors='coerce')\n",
+    "\n",
+    "#price\n",
+    "df['Price USD']=df.apply(lambda x:\n",
+    "                  float(x['Price'].split('$')[0].replace(',','')) if '$' in str(x) else None, axis=1\n",
+    ")\n",
+    "df=df.drop(columns='Price')\n",
+    "\n",
+    "df=df[(df['Price USD']>0)&(df['Area SQMT']>0)]\n",
+    "df['Price Per SQMT']=(df['Price USD']/df['Area SQMT']).round(2)\n",
+    "df=df.dropna(subset=['Price Per SQMT'])\n",
+    "\n",
+    "mean_price=df['Price Per SQMT'].mean()\n",
+    "std_price=df['Price Per SQMT'].mean()\n",
+    "df=df.query('@mean_price-5*@std_price<`Price Per SQMT`<@mean_price+5*@std_price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates_dict=pickle.load(open(\"data/coordinates_dict.pickle\",'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_coordinates(address):\n",
+    "    if address in coordinates_dict:\n",
+    "        return coordinates_dict[address]\n",
+    "    else:\n",
+    "        return {'Lat': None, 'Lon': None, 'Street': None}\n",
+    "    \n",
+    "mapped_coordinates=df['address_simplified'].apply(map_coordinates)\n",
+    "mapped_df=pd.DataFrame(mapped_coordinates.tolist(),index=df.index)\n",
+    "df=pd.concat([df,mapped_df],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates_df=df[['Date Published','Price Per SQMT','Lat','Lon','Street']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates_df.to_csv('data/coordinates_df.csv',index=False)"
    ]
   },
   {
